--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div>
                 
                 <div class="navbar-end">
-                  <a class="btn text-xl font-bold">Login</a>
+                 <button id="login-btn"><a href="login.html" class="btn text-xl font-bold">Login</a></button>
                   <div class="divider lg:divider-horizontal">|</div>
                   <a class="btn text-xl font-bold">Sign Up</a>
                 </div>
@@ -50,7 +50,7 @@
               
               <div class="hero-content text-neutral-content text-center">
                 <div class="max-w-md">
-                  <h1 class="mb-5 text-5xl font-bold">A NEW STAR
+                  <h1 class="mb-5 text-5xl font-bold text-white">A NEW STAR
                     IN YOUR SKYLINE</h1>
                   <p class="mb-5">
                     Enjoy remarkable travel experiences with us.
@@ -84,6 +84,6 @@
               </div>
             </div>
         </div>
-
+<script src="js/login.js"></script>
 </body>
 </html>
