--- a/login.html
+++ b/login.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.14/dist/full.min.css" rel="stylesheet" type="text/css" />    
+    <script src="https://cdn.tailwindcss.com"></script>
+
 
     <title>Login</title>
 </head>
@@ -13,21 +14,17 @@
     <div class="hero bg-base-200 min-h-screen">
         <div class="hero-content flex-col lg:flex-row-reverse">
           <div class="text-center lg:text-left">
-            <h1 class="text-5xl font-bold">Login now!</h1>
-            <p class="py-6">
-              Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
-              quasi. In deleniti eaque aut repudiandae et a id nisi.
-            </p>
+            <h1 class="text-5xl font-bold text-white">Login now!</h1>
           </div>
-          <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+          <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl border-4 h-96 bg-sky-900">
             <div class="card-body">
-              <fieldset class="fieldset">
+              <fieldset class="fieldset text-white text-xl">
                 <label class="label">Email</label>
-                <input type="email" class="input" placeholder="Email" />
+                <div class="border-2 rounded-sm ..."><input type="email" class="input" placeholder="Email" /></div>
                 <label class="label">Password</label>
-                <input type="password" class="input" placeholder="Password" />
+                <div class="border-2 rounded-sm ..."><input type="password" class="input" placeholder="Password" /></div>
                 <div><a class="link link-hover">Forgot password?</a></div>
-                <button class="btn btn-neutral mt-4">Login</button>
+                <button class="btn btn-neutral mt-4 btn btn-error w-24 text-white text-xl">Login</button>
               </fieldset>
             </div>
           </div>
