added navbar section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body >
     <section>
         <div>
-            <div class="navbar bg-base-200 shadow-sm text-orange-600 brightness-100 ... relative">
+            <div class="navbar bg-base-200 shadow-sm text-orange-600 relative">
                 <div class="navbar-start">
                   <div class="dropdown">
                     <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
