addEventListener Signup Section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="navbar-end">
                  <button id="login-btn"><a href="login.html" class="btn text-xl font-bold">Login</a></button>
                   <div class="divider lg:divider-horizontal">|</div>
-                  <a class="btn text-xl font-bold">Sign Up</a>
+                  <button id="signup-btn"><a href="signup.html" class="btn text-xl font-bold">Sign Up</a></button>
                 </div>
                 
               </div>
