--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 </div>
                 
                 <div class="navbar-end">
-                 <button id="login-btn"><a href="login.html" class="btn text-xl font-bold">Login</a></button>
+                 <button id="login-btn"><a href="login.html" class="btn text-xl font-bold btn btn-error">Login</a></button>
                   <div class="divider lg:divider-horizontal">|</div>
-                  <button id="signup-btn"><a href="signup.html" class="btn text-xl font-bold">Sign Up</a></button>
+                  <button id="signup-btn"><a href="signup.html" class="btn text-xl font-bold btn btn-primary">Sign Up</a></button>
                 </div>
                 
               </div>
