added image carousel section

--- a/index.html
+++ b/index.html
@@ -155,28 +155,28 @@
 <div class="swiper mySwiper carousel">
   <div class="swiper-wrapper">
     <div class="swiper-slide carousel-item">
-      <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
+      <img src="image/image3.jpg" />
     </div>
     <div class="swiper-slide carousel-item">
-      <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
+      <img src="image/image2.jpg" />
     </div>
     <div class="swiper-slide carousel-item">
-      <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
+      <img src="image/image3.jpg" />
     </div>
     <div class="swiper-slide carousel-item">
-      <img src="https://swiperjs.com/demos/images/nature-4.jpg" />
+      <img src="image/image4.jpeg" />
     </div>
     <div class="swiper-slide carousel-item">
-      <img src="https://swiperjs.com/demos/images/nature-5.jpg" />
+      <img src="image/image5.jpeg" />
     </div>
     <div class="swiper-slide carousel-item">
-      <img src="https://swiperjs.com/demos/images/nature-6.jpg" />
+      <img src="image/image4.jpeg" />
     </div>
     <div class="swiper-slide carousel-item">
-      <img src="https://swiperjs.com/demos/images/nature-7.jpg" />
+      <img src="image/image4.jpeg" />
     </div>
     <div class="swiper-slide carousel-item">
-      <img src="https://swiperjs.com/demos/images/nature-8.jpg" />
+      <img src="image/image5.jpeg" />
     </div>
     <div class="swiper-slide carousel-item">
       <img src="https://swiperjs.com/demos/images/nature-9.jpg" />
