--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       <img src="image/image5.jpeg" />
     </div>
     <div class="swiper-slide carousel-item">
-      <img src="https://swiperjs.com/demos/images/nature-9.jpg" />
+      <img src="image/image1.jpg" />
     </div>
   </div>
 </div>
@@ -268,11 +268,11 @@
       centeredSlides: true,
       slidesPerView: "auto",
       coverflowEffect: {
-        rotate: 50,
+        rotate: 0,
         stretch: 0,
         depth: 100,
-        modifier: 1,
-        slideShadows: true,
+        modifier: 2.5,
+        slideShadows: false,
       },
       pagination: {
         el: ".swiper-pagination",
