--- a/index.html
+++ b/index.html
@@ -8,40 +8,41 @@
      <!-- Link Swiper's CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
    <!-- Demo styles -->
-   <style>
-    html,
-    body {
-      position: relative;
-      height: 100%;
-    }
+    <!-- Demo styles -->
+    <style>
+      html,
+      body {
+        position: relative;
+        height: 100%;
+      }
 
-    body {
-      background: #eee;
-      font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-      font-size: 14px;
-      color: #000;
-      margin: 0;
-      padding: 0;
-    }
+      body {
+        background: #eee;
+        font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+        font-size: 14px;
+        color: #000;
+        margin: 0;
+        padding: 0;
+      }
 
-    .swiper {
-      width: 100%;
-      padding-top: 50px;
-      padding-bottom: 50px;
-    }
+      .swiper {
+        width: 100%;
+        padding-top: 50px;
+        padding-bottom: 50px;
+      }
 
-    .swiper-slide {
-      background-position: center;
-      background-size: cover;
-      width: 300px;
-      height: 300px;
-    }
+      .swiper-slide {
+        background-position: center;
+        background-size: cover;
+        width: 300px;
+        height: 300px;
+      }
 
-    .swiper-slide img {
-      display: block;
-      width: 100%;
-    }
-  </style>
+      .swiper-slide img {
+        display: block;
+        width: 100%;
+      }
+    </style>
     
 </head>
 <body >
@@ -152,7 +153,7 @@
           <!-- flight carasol -->
            <!-- Swiper -->
  
-<div class="swiper mySwiper carousel">
+<div class="swiper mySwiper carousel w-full">
   <div class="swiper-wrapper">
     <div class="swiper-slide carousel-item">
       <img src="image/image3.jpg" />
@@ -261,24 +262,30 @@
  <!-- Swiper JS -->
  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
    <!-- Initialize Swiper -->
-   <script>
-    var swiper = new Swiper(".mySwiper", {
+  <!-- Initialize Swiper -->
+  <script>
+    let swiper = new Swiper(".mySwiper", {
       effect: "coverflow",
       grabCursor: true,
-      centeredSlides: true,
-      slidesPerView: "auto",
+      centeredSlides: false,
+      initialSlide: 4,
+      loop: false,
+      slidesPerView: 3,
       coverflowEffect: {
         rotate: 0,
-        stretch: 0,
+        stretch: 4,
         depth: 100,
-        modifier: 2.5,
+        modifier: 3,
         slideShadows: false,
       },
       pagination: {
         el: ".swiper-pagination",
+        clickable: true,
       },
-
-      
+      navigation: {
+        nextEl: ".swiper-button-next",
+        prevEl: ".swiper-button-prev",
+      },
     });
   </script>
 </body>
