--- a/index.html
+++ b/index.html
@@ -200,60 +200,26 @@
  
  <!-- 3rd section -->
  <div class="text-center mt-12 ">
- <div class="stats shadow text-center bg-yellow-300 text-white">
-  <div class="stat">
-    <div class="stat-figure text-white">
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 24 24"
-        class="inline-block h-8 w-8 stroke-current"
-      >
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"
-        ></path>
-      </svg>
-    </div>
-    <div class="stat-title text-primary">Get ready for the travel <br> experience like never before.</div>
+ <div class="stats shadow text-center bg-yellow-300 text-white w-full h-64 ">
+  <div class="stat border border-gray-300 ...">
+    <img class="w-12 mx-auto" src="image/aeroplane_7800369.png" alt="">
+    <div class="stat-title text-primary text-xl">Get ready for the travel <br> experience like never before.</div>
     <!-- <div class="stat-value text-primary">25.6K</div> -->
     <!-- <div class="stat-desc">21% more than last month</div> -->
   </div>
 
-  <div class="stat text-center">
-    <div class="stat-figure text-secondary">
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 24 24"
-        class="inline-block h-8 w-8 stroke-current"
-      >
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M13 10V3L4 14h7v7l9-11h-7z"
-        ></path>
-      </svg>
-    </div>
-    <div class="stat-title">Page Views</div>
-    <div class="stat-value text-secondary">2.6M</div>
-    <div class="stat-desc">21% more than last month</div>
+  <div class="stat text-center ">
+    
+    <img class="w-12 mx-auto" src="image/paper-plane_4822150.png" alt="">
+    <div class="stat-title text-primary  text-xl">Plan ahead & book air ticket <br> with confidence at lowest fare.</div>
   </div>
 
-  <div class="stat">
-    <div class="stat-figure text-secondary">
-      <div class="avatar online">
-        <div class="w-16 rounded-full">
-          <img src="https://img.daisyui.com/images/profile/demo/anakeen@192.webp" />
-        </div>
-      </div>
-    </div>
-    <div class="stat-value">86%</div>
-    <div class="stat-title">Tasks done</div>
-    <div class="stat-desc text-secondary">31 tasks remaining</div>
+  <div class="stat border border-gray-300 ...">
+    
+    <!-- <div class="stat-value">86%</div> -->
+    <img class="w-12 mx-auto" src="image/download (1).png" alt="">
+    <div class="stat-title text-primary  text-xl">Book tickets online, Save 12% on base fare. <br>Promo Code: AIRASTRA12</div>
+    <!-- <div class="stat-desc text-secondary">31 tasks remaining</div> -->
   </div>
 </div>
 </div>
