added another section

--- a/index.html
+++ b/index.html
@@ -281,11 +281,94 @@
     
   </div>
 </div>
-
-
-
  </div>
 
+ <!-- 4rd section -->
+
+ <div class="mt-32">
+  <div class="hero bg-sky-900 ">
+    <div class="hero-content flex-col lg:flex-row rounded-md ... border ...">
+      <img
+        src="image/image7.jpg"
+        class="max-w-sm rounded-lg shadow-2xl w-5/6 h-96"
+      />
+      <div>
+        <h1 class="text-5xl font-bold text-white">Fly Cox’s Bazar Daily</h1>
+        <p class="py-6 text-white">
+          Nestled along the Bay of Bengal in Bangladesh lies the breathtakingly beautiful Cox's Bazar, a paradise of sun, sand, and sea that's a must-visit destination for any traveler. &nbsp; Known for its unbroken 120-kilometer stretch of white sandy beach, Cox's Bazar is a perfect escape from the hustle and bustle of city life. You can take a leisurely stroll along the beach, bask in the warm sun, or take a dip in the crystal-clear waters ...
+        </p>
+        <button class="btn btn-warning">Explore More</button>
+      </div>
+    </div>
+  </div>
+
+  <!--  -->
+  <div class="hero bg-gray-700 min-h-screen">
+    <div class="hero-content flex-col lg:flex-row-reverse bg-sky-900 rounded-md ... border ...">
+      <img
+        src="image/image6.jpg"
+        class="max-w-sm rounded-lg shadow-2xl w-5/6 h-96"
+      />
+      <div>
+        <h1 class="text-5xl font-bold text-white">Fly Dhaka Daily</h1>
+        <p class="py-6 text-white">
+          Dhaka, the bustling capital city of Bangladesh, is a true gem of South Asia. From its rich history and culture to its vibrant food scen...
+        </p>
+        <button class="btn btn-warning">Explore More</button>
+      </div>
+    </div>
+  </div>
+  <!--  -->
+  <div class="hero bg-sky-900 ">
+    <div class="hero-content flex-col lg:flex-row rounded-md ... border ...">
+      <img
+        src="image/image6.jpeg"
+        class="max-w-sm rounded-lg shadow-2xl w-5/6 h-96"
+      />
+      <div>
+        <h1 class="text-5xl font-bold text-white">Fly Cox’s Bazar Daily</h1>
+        <p class="py-6 text-white">
+          Nestled along the Bay of Bengal in Bangladesh lies the breathtakingly beautiful Cox's Bazar, a paradise of sun, sand, and sea that's a must-visit destination for any traveler. &nbsp; Known for its unbroken 120-kilometer stretch of white sandy beach, Cox's Bazar is a perfect escape from the hustle and bustle of city life. You can take a leisurely stroll along the beach, bask in the warm sun, or take a dip in the crystal-clear waters ...
+        </p>
+        <button class="btn btn-warning">Explore More</button>
+      </div>
+    </div>
+  </div>
+
+  <!--  -->
+  <div class="hero bg-gray-700 min-h-screen">
+    <div class="hero-content flex-col lg:flex-row-reverse bg-sky-900 rounded-md ... border ...">
+      <img
+        src="image/image3.jpg"
+        class="max-w-sm rounded-lg shadow-2xl w-5/6 h-96"
+      />
+      <div>
+        <h1 class="text-5xl font-bold text-white">Fly Dhaka Daily</h1>
+        <p class="py-6 text-white">
+          Dhaka, the bustling capital city of Bangladesh, is a true gem of South Asia. From its rich history and culture to its vibrant food scen...
+        </p>
+        <button class="btn btn-warning">Explore More</button>
+      </div>
+    </div>
+  </div>
+  <!--  -->
+  <div class="hero bg-sky-900 ">
+    <div class="hero-content flex-col lg:flex-row rounded-md ... border ...">
+      <img
+        src="image/image5.jpeg"
+        class="max-w-sm rounded-lg shadow-2xl w-5/6 h-96"
+      />
+      <div>
+        <h1 class="text-5xl font-bold text-white">Fly Cox’s Bazar Daily</h1>
+        <p class="py-6 text-white">
+          Nestled along the Bay of Bengal in Bangladesh lies the breathtakingly beautiful Cox's Bazar, a paradise of sun, sand, and sea that's a must-visit destination for any traveler. &nbsp; Known for its unbroken 120-kilometer stretch of white sandy beach, Cox's Bazar is a perfect escape from the hustle and bustle of city life. You can take a leisurely stroll along the beach, bask in the warm sun, or take a dip in the crystal-clear waters ...
+        </p>
+        <button class="btn btn-warning">Explore More</button>
+      </div>
+    </div>
+  </div>
+  
+ </div>
 
 <script src="js/login.js"></script>
 <script src="js/signup.js"></script>
