--- a/index.html
+++ b/index.html
@@ -367,7 +367,41 @@
       </div>
     </div>
   </div>
-  
+ </div>
+
+ <!-- footer section -->
+
+ <div class="mt-12">
+  <footer class="footer sm:footer-horizontal bg-base-100 text-base-content p-10">
+    <aside>
+      <img class="w-12" src="image/aeroplane_7800369.png" alt="">
+      <p>
+        AIRASTRA
+        <br />
+        Providing reliable tech since 1992
+      </p>
+    </aside>
+    <nav>
+      <h6 class="footer-title">Services</h6>
+      <a class="link link-hover">Branding</a>
+      <a class="link link-hover">Design</a>
+      <a class="link link-hover">Marketing</a>
+      <a class="link link-hover">Advertisement</a>
+    </nav>
+    <nav>
+      <h6 class="footer-title">Company</h6>
+      <a class="link link-hover">About us</a>
+      <a class="link link-hover">Contact</a>
+      <a class="link link-hover">Jobs</a>
+      <a class="link link-hover">Press kit</a>
+    </nav>
+    <nav>
+      <h6 class="footer-title">Legal</h6>
+      <a class="link link-hover">Terms of use</a>
+      <a class="link link-hover">Privacy policy</a>
+      <a class="link link-hover">Cookie policy</a>
+    </nav>
+  </footer>
  </div>
 
 <script src="js/login.js"></script>
